--- a/.github/workflows/develop-wakatime.yml
+++ b/.github/workflows/develop-wakatime.yml
@@ -1,10 +1,9 @@
 name: wakatime
 
 on:
-  workflow_dispatch:
   schedule:
-    # Runs at 12am IST
-    - cron: '30 * * * *'
+    - cron: '0 0 * * *'
+  workflow_dispatch:
 
 jobs:
   update-readme:
