--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,11 +1,10 @@
 name: Metrics
+
 on:
   schedule:
-    - cron: '0 0 */2 * *'
+    - cron: '0 0 * * *'
   workflow_dispatch:
-  push:
-    branches:
-      - main
+
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
